# baldur

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  sv.cc  sv.hh  symbol.cc  symbol.hh  util.hh
tests/: CMakeLists.txt  test_sv.cc
tests/vectors/: test1.sv
